# alfred-gitignore

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.txt  README.md  gitignore-build.py  gitignore-input.py  gitignore-update.py  gitignore.alfredworkflow  info.plist  sh.py
.github/: auto-merge.yml  dependabot.yml  flowcrafter.yml  labels.yml
.github/workflows/: github.yml  json.yml  lint.yaml  markdown.yml  preview.yaml  release.yaml  release.yml  repository.yml  rust.yaml  rust.yml  security.yaml  security.yml  shell.yml  yaml.yml
src/: build.rs  builder.rs  command.rs  main.rs  query.rs  repository.rs  select.rs  testing.rs  update.rs
src/command/: build.rs  select.rs  update.rs
tests/: build.rs  default.rs  select.rs  update.rs
tests/files/repository/: apples.gitignore  oranges.gitignore
