[package]
name = "alfred-gitignore"
version = "2.1.0"
license = "MIT"
authors = ["Jan David <jandavid@6a64.com>"]
edition = "2018"

description = "An Alfred workflow that creates .gitignore files"
readme = "README.md"

repository = "https://github.com/jdno/alfred-gitignore"

categories = ["command-line-utilities"]
keywords = ["cli", "git", "gitignore", "alfred", "workflow"]

[package.metadata.release]
 disable-publish = true
 disable-push = true
 disable-tag = true
 no-dev-version = true
 pre-release-commit-message = "Release {{version}}"
 pre-release-replacements = [
   {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [{{version}}] - {{date}}"},
   {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...v{{version}}", exactly=1},
   {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased]", exactly=1},
   {file="CHANGELOG.md", search="\\[unreleased\\]", replace="[{{version}}]"},
   {file="CHANGELOG.md", search="<!-- next-url -->\n", replace="<!-- next-url -->\n\n[unreleased]: https://github.com/jdno/alfred-gitignore/compare/v{{version}}...HEAD", exactly=1},
 ]

[dependencies]
alfred = "4.0.2"
clap = "2.33.3"
getset = "0.1.1"
reqwest = { version = "0.11.4", features = ["blocking"] }
zip = "0.5.13"

[dev-dependencies]
assert_cmd = "1.0.8"
mockito = "0.30.0"
predicates = "2.0.1"
tempfile = "3.2.0"
